--- a/MIST143_Traveler/Views/Shared/Components/CustomerOrder/Default.cshtml
+++ b/MIST143_Traveler/Views/Shared/Components/CustomerOrder/Default.cshtml
@@ -36,6 +36,9 @@
 
             <tr>
 
+                <!--<td>-->
+                    @*@Html.DisplayFor(modelItem => item.OrderDetailId)*@
+                <!--</td>-->
                 <td>
                     @Html.DisplayFor(modelItem => item.訂單編號)
                 </td>
