--- a/MIST143_Traveler/Views/Shopping/PayData.cshtml
+++ b/MIST143_Traveler/Views/Shopping/PayData.cshtml
@@ -93,7 +93,7 @@
                             <div class="infoBoxInner">
                                 <div class="payUserRow">
                                     <div class="payUser active">
-                                        林恆佑
+                                        @Model.產品會員.FirstOrDefault().MemberName
                                     </div>
                                     <div class="payUser" data-bs-toggle="modal" data-bs-target="#contentModal">
                                         + 新增
