--- a/MIST143_Traveler/Views/TransportationPage/TransportationHomePage.cshtml
+++ b/MIST143_Traveler/Views/TransportationPage/TransportationHomePage.cshtml
@@ -3,7 +3,6 @@
     ViewData["Title"] = "TransportationHomePage";
 }
 
-<h1>帥然的交通頁面</h1>
 <!DOCTYPE html>
 <html lang="en">
 
@@ -47,7 +46,10 @@
         <img src="~/images/macImg/658e718b-d83c-41a5-a1cc-a28daf93ff9a.jpg">
 
     </div>
-
+    <form method="post">
+        <input name="要傳的字串" value="台北" /> 
+        <input type="submit" />
+    </form>
 
     <div class="research">
         <div class="wrap">
