--- a/MIST143_Traveler/Views/CustomerCenter/CustomerInfo.cshtml
+++ b/MIST143_Traveler/Views/CustomerCenter/CustomerInfo.cshtml
@@ -56,17 +56,7 @@
             </div>
         </div>
 
-        <div class="box_body d-flex  mb-2">
-            <div class="inputs p-2 flex-fill">
-                <header>重設密碼</header>
-                <input class="form-control" type="text" id="Password" placeholder="password" aria-label="default input example">
-            </div>
-
-            <div class="inputs p-2 flex-fill">
-                <header>再次確認密碼</header>
-                <input class="form-control" type="text" placeholder="password" aria-label="default input example">
-            </div>
-        </div>
+    
 
         <div class="d-flex mb-3">
             <div class="me-auto p-2">
@@ -80,18 +70,18 @@
 @section Scripts {
     
     <script>
-          @*const cont = document.querySelector("#cont")
+          const cont = document.querySelector("#cont")
         const Btnsave = document.querySelector("#send")
-        const bb = () => {
+        //const bb = () => {
 
-            var postData = {
-               Address: $("#Address").val(),
-               MemberName: $("#MemberName").val(),
-               Phone: $("#Phone").val(),
-               MembersId: $("#MembersId").val(),
-                Password: $("#Password").val(),
-                Cityname: $("#CityId").val(),
-            };
+        //    var postData = {
+        //       Address: $("#Address").val(),
+        //       MemberName: $("#MemberName").val(),
+        //       Phone: $("#Phone").val(),
+        //       MembersId: $("#MembersId").val(),
+        //        Password: $("#Password").val(),
+        //        Cityname: $("#CityId").val(),
+        //    };
             //console.log(123)
              $.ajax({
                 url: '@Url.Action("SaveCusInfo", "CustomerCenter")',
@@ -115,7 +105,7 @@
                     )
                 }
             })
-        }*@
+        /*}*/
          //抓資料庫城市資料
 
         async function LoadCities() {
