--- a/MIST143_Traveler/Views/CustomerCenter/List.cshtml
+++ b/MIST143_Traveler/Views/CustomerCenter/List.cshtml
@@ -47,17 +47,19 @@
 
                         <div><button id="btnlove" class="btn btn-outline-warning 按鈕顏色2"><span class="bi bi-heart 小圖示"></span>我的最愛</button></div>
                         <div><button id="btnreview" class="btn btn-outline-warning 按鈕顏色2"><span class="bi bi-chat-left-text 小圖示"></span>我的評論</button></div>
-                        <div><button id="btnstar" class="btn btn-outline-warning 按鈕顏色2"><span class="bi bi-star 小圖示"></span>Star積分</button></div>
                         <div><button id="btncop" class="btn btn-outline-warning 按鈕顏色2"><span class="bi bi-wallet2 小圖示"></span>優惠票券</button></div>
+                        <div><button id="btnstar" class="btn btn-outline-warning 按鈕顏色2"><span class="bi bi-key 小圖示"></span>修改密碼</button></div>
+
                     </div>
                 </div>
 
-                <div id="cont" class="col-12 col-md-9">
+                <div id="cont" class="col-9 col-md-9">
 
 
 
                     <div class="row row-cols-1">
                         <div class="col 上面空間">
+
                             <h3>個人資訊</h3>
                             <p>以下資訊僅用於幫助你在付款時自動填寫你的個人資料，你的資料將會安全地保存且不會公開</p>
                         </div>
@@ -99,17 +101,7 @@
                             </div>
                         </div>
 
-                        <div class="box_body d-flex  mb-2">
-                            <div class="inputs p-2 flex-fill">
-                                <header>重設密碼</header>
-                                <input class="form-control" type="text" id="Password" placeholder="password" aria-label="default input example">
-                            </div>
-
-                            <div class="inputs p-2 flex-fill">
-                                <header>再次確認密碼</header>
-                                <input class="form-control" type="text" placeholder="password" aria-label="default input example">
-                            </div>
-                        </div>
+                        
 
                         <div class="d-flex mb-3">
                             <div class="me-auto p-2">
@@ -211,7 +203,7 @@
 
 
     $('#btnlove').click(function () {
-        $('#cont').load('@Url.Content("~/CustomerCenter/Myfavorites")')
+        $('#cont').load('@Url.Action("CommentList", "CustomerCenter",new {v.MembersId})')
         $(this).addClass("btn btn-outline-warning 按鈕顏色2 active")
         $('#btnorder').removeClass("active")
         $('#btnreview').removeClass("active")
@@ -222,7 +214,7 @@
         })
 
         $('#btnreview').click(function () {
-        $('#cont').load('@Url.Content("~/CustomerCenter/Review")')
+        $('#cont').load('@Url.Action("CommentList", "CustomerCenter",new {v.MembersId})')
             $(this).addClass("btn btn-outline-warning 按鈕顏色2 active") //我的評論按鈕
             $('#btnorder').removeClass("active")
             $('#btnlove').removeClass("active")
@@ -232,8 +224,8 @@
         })
 
         $('#btnstar').click(function () {
-        $('#cont').load('@Url.Content("~/CustomerCenter/Star")')
-            $(this).addClass("btn btn-outline-warning 按鈕顏色2 active") //Star
+        $('#cont').load('@Url.Content("~/CustomerCenter/PasswordChange")')
+            $(this).addClass("btn btn-outline-warning 按鈕顏色2 active") //變更密碼
             $('#btnorder').removeClass("active")
             $('#btnlove').removeClass("active")
             $('#btnreview').removeClass("active")
