--- a/MIST143_Traveler/Views/ProductListPage2/ProductListPage.cshtml
+++ b/MIST143_Traveler/Views/ProductListPage2/ProductListPage.cshtml
@@ -14,7 +14,10 @@
             var name = `?keyword=` + qq
             $("#ans").load(url + name)
         })
-
+        function show(){
+            var content = document.getElementById("text");
+            document.getElementById("txt").textContent = content.value;
+        }
     </script>
 }
 
@@ -34,7 +37,7 @@
                     <span class="bi-search"></span>
                     <input type="text" name="keyword" id="text" placeholder="探索全球目的地/活動" />
                     @*<a href="@Url.Action("ProductListPage","ProductListPage2",new {})">搜尋</a>*@
-                    <button type="button" id="btn">搜尋</button>
+                    <button type="button" onclick="show()" id="btn">搜尋</button>
                 </div>
             </div>
 
@@ -50,7 +53,7 @@
         </nav>
     </div>
     <div class="main-content search-main-content">
-        <p class="search-result-title">以下是與「 <a id="text"></a>」的體驗</p>
+        <p class="search-result-title">以下是與「 <a id="txt"></a>」的體驗</p>
         <div class="category-tree-and-activity-list js-category-tree-and-activity-list">
             <div class="destinations-category-tree">
                 <div class="contain containerp">
@@ -193,63 +196,20 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="accordion-item">
-                                            <h2 class="accordion-header" id="panelsStayOpen-headingFive">
-                                                <button class="accordion-button collapsed accordion-btn" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseFive" aria-expanded="false" aria-controls="panelsStayOpen-collapseFive">
-                                                    西歐
-                                                </button>
-                                            </h2>
-                                            <div id="panelsStayOpen-collapseFive" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingFive">
-                                                <div class="accordion-body">
-                                                    <div class="form-check">
-                                                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                                                        <label>英國</label>
-                                                    </div>
-                                                    <div class="form-check">
-                                                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                                                        <label>法國</label>
-                                                    </div>
-                                                    <div class="form-check">
-                                                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" disabled>
-                                                        <label>荷蘭</label>
-                                                    </div>
-                                                    <div class="form-check">
-                                                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" disabled>
-                                                        <label>愛爾蘭</label>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="accordion-item">
-                                            <h2 class="accordion-header" id="panelsStayOpen-headingSix">
-                                                <button class="accordion-button collapsed accordion-btn" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseSix" aria-expanded="false" aria-controls="panelsStayOpen-collapseSix">
-                                                    中歐
-                                                </button>
-                                            </h2>
-                                            <div id="panelsStayOpen-collapseSix" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingSix">
-                                                <div class="accordion-body">
-                                                    <div class="form-check">
-                                                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                                                        <label>德國</label>
-                                                    </div>
-                                                    <div class="form-check">
-                                                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" disabled>
-                                                        <label>奧地利</label>
-                                                    </div>
-                                                    <div class="form-check">
-                                                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                                                        <label>瑞士</label>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-
                                     </div>
 
                                 </div>
 
                             </div>
 
+                        </div>
+                        <div class="show-all">
+                            <button type="button" data-bs-toggle="modal" data-bs-target="#loginmodal"  class="klk-button klk-button-outlined klk-button-small klk-button-block">
+                                <span>
+                                    查看全部
+                                </span>                                
+                            </button>
+                            
                         </div>
                     </div>
                 </div>
@@ -265,4 +225,54 @@
         </div>
 
     </div>
+    <div class="modal fade" id="loginmodal">
+    <div class="modal-dialog klk-modal-wrapper" z-index:2000; >
+        <div class="modal-content klk-modal klk-modal-scrollable klk-fade klk-modal-large klk-modal-overflow-y" @*style="padding-bottom: 0px; width: 900px; max-height: 457px;"*@>
+            <i class="klk-modal-close klk-icon klk-icon-icon_navigation_close klk-modal-close" aria-lable="Close">
+                <svg>
+                    <line x1="0" x2="20" y1="0" y2="20" style="stroke: white; stroke-width: 2">                   
+                    <use xlink:href="#klk-icon-icon_navigation_close"></use></line>                                    
+                    <line x1="0" x2="20" y1="20" y2="0" style="stroke: white; stroke-width: 2"></line>
+                </svg>
+            </i>
+            <div class="modal-body klk-modal-body">
+                <div class="search">
+                    <div class="search-input-desktop">
+                        <input class="search" type="text" placeholder="搜尋目的地" />  
+                        <span class="bi-search"></span>
+                    </div>
+                </div>
+                <div class="tree">
+                    <div data-spm-module="DestinationFilter?trg=manual&ext={"country_id":"","city_id":"19"}" class="js-range-tree-spm" >
+                        <div class="klk-tree-node">
+                            <div class="klk-tree klk-tree-checkable klk-tree-multiple">
+                                <div class="accordion" id="accordionPanelsStayOpenExample">
+                                    <div class="accordion-item d-flex aitemhi">
+                                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" style="width:30px;height:30px">
+                                        <button class="accordion-button aitem" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">東亞
+                                        </button>
+                                        <h2 class="accordion-header" id="panelsStayOpen-headingOne"> </h2>
+                                        <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
+                                            <div class="accordion-body">
+                                                <strong></strong>
+                                            </div>
+                                        </div>
+                                    </div>
+                                   
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+              <div class="footer js-tree-modal-confirm">
+                  <button class="klk-button klk-button-primary" color="primary" data-spm-item="__default">
+                      <span>確認</span>
+                  </button>
+              </div>
+            </div>
+        </div>
+    </div>
+</div>
 </article>
