--- a/MIST143_Traveler/wwwroot/css/ProductListPage2.css
+++ b/MIST143_Traveler/wwwroot/css/ProductListPage2.css
@@ -767,6 +767,9 @@ a {
 .accordion-btn {
     width: 83%;
 }
+.accord-btn {
+    display:contents;
+}
 
 .frmcheckin {
     vertical-align: auto;
@@ -779,4 +782,254 @@ a {
     flex-direction: row;
     align-content: stretch;
     flex-wrap: wrap;
+}
+.klk-button-small {
+    min-width: 72px;
+    line-height: 20px;
+    font-size: 14px;
+    padding: 7px 16px;
+}
+
+.klk-button-block {
+    display: block;
+    width: 80%;
+}
+
+.klk-button-outlined {
+    color: #212121;
+    background-color: transparent;
+    border: 1px solid #4a4a4a;
+}
+
+.show-all {
+    padding: 16px 0;
+}
+
+.klk-button {
+    min-width: 86px;
+    display: inline-block;
+    font-size: 16px;
+    font-stretch: normal;
+    font-style: normal;
+    font-weight: 500;
+    border-radius: 6px;
+    padding: 10px 20px;
+    margin: 0;
+    text-align: center;
+    line-height: 22px;
+    outline: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    text-transform: none;
+    text-decoration: none;
+/*    overflow: hidden;
+*/    cursor: pointer;
+}
+.klk-modal-wrapper {
+    --bs-modal-zindex: 1055;
+    --bs-modal-width: 900px;
+    position: fixed;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    display: -webkit-box;
+    display: flex;
+    -webkit-box-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    align-items: center;
+    color: #212121;
+}
+.klk-modal {
+    position: relative;
+    background-color: #fff;
+    border-radius: 20px;
+    outline: none;
+    /* padding: 24px
+px
+ 0; */
+    /* box-shadow: 0 4px 20px 0 rgb(0 0 0 / 8%); */
+}
+.klk-icon {
+    display: inline-block;
+    font-style: normal;
+    font-weight: 400;
+    width: 1em;
+    height: 1em;
+    line-height: 1em;
+    -webkit-transform: translateZ(0);
+    transform: translateZ(0);
+}
+.form-check-input{
+    border-radius: 0.25em;
+}
+
+.form-check .form-check-input {
+    float: left;
+    margin-left: -1.5em;
+}
+
+.form-check-input {
+    width: 1em;
+     height: 0; 
+    margin-top: 0.25em;
+    vertical-align: top;
+    background-color: #fff;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    border: 1px solid rgba(0,0,0,.25);
+   
+   
+
+    -webkit-print-color-adjust: exact;
+
+
+}
+
+.klk-modal-scrollable .klk-modal-body {
+    overflow-x: hidden;
+    overflow-y: auto;
+    -webkit-overflow-scrolling: touch;
+    max-height: 303px;
+}
+
+.klk-modal-large .klk-modal-body, .klk-modal-large .klk-modal-footer, .klk-modal-large .klk-modal-header {
+    padding-left: 40px;
+    padding-right: 40px;
+}
+.klk-modal-close {
+    position: absolute;
+    right: -38px;
+    top: 0;
+    cursor: pointer;
+    font-size: 20px;
+    color: #fff;
+    fill: white;
+}
+svg {
+    width: 1em;
+    height: 1em;
+    fill: currentColor;
+}
+.klk-icon svg {
+    width: 1em;
+    height: 1em;
+    fill: white;
+}
+.modal-container .search .search-input-desktop {
+    position: relative;
+    display: -webkit-box;
+    display: flex;
+    -webkit-box-pack: start;
+    justify-content: flex-start;
+    -webkit-box-align: center;
+    align-items: center;
+}
+
+*, :after, :before {
+    /* -webkit-box-sizing: inherit; */
+    /* box-sizing: inherit; */
+}
+
+*, :after, :before {
+    /* box-sizing: inherit; */
+}
+
+*, :after, :before {
+    /* box-sizing: border-box; */
+}
+
+user agent stylesheet
+div {
+    display: block;
+}
+.modal-container .search .search-input-desktop input{
+    display: block;
+    width: 100%;
+     font-size: 20px; 
+    font-weight: 500;
+    color: #212121;
+    padding: 10px 0;
+    outline: none;
+    border: none;
+    border-bottom: 1px solid #4a4a4a;
+}
+input {
+
+    width: 97%;
+    /* font-size: 20px; */
+    font-weight: 500;
+    color: #212121;
+    padding: 10px 0;
+    outline: none;
+    border: none;
+    border-bottom: 1px solid #4a4a4a;
+}
+.footer {
+    text-align: right;
+    padding-top: 20px;
+}
+
+*, :after, :before {
+    -webkit-box-sizing: inherit;
+    box-sizing: inherit;
+}
+.klk-button-primary {
+    color: #fff;
+    background-color: #ff5b00;
+    border: 1px solid #ff5b00;
+}
+
+.klk-button {
+    min-width: 86px;
+    display: inline-block;
+    font-size: 16px;
+    font-stretch: normal;
+    font-style: normal;
+    font-weight: 500;
+    border-radius: 6px;
+    padding: 10px 20px;
+    margin: 0;
+    text-align: center;
+    line-height: 22px;
+    outline: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    
+    text-transform: none;
+    text-decoration: none;
+    overflow: hidden;
+    cursor: pointer;
+}
+.klk-tree, .klk-tree .klk-tree-node {
+    display: -webkit-box;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    flex-direction: column;
+}
+
+*, :after, :before {
+    -webkit-box-sizing: inherit;
+    box-sizing: inherit;
+}
+.tree {
+    height:3890px;
+}
+.aitem {
+    width: 100%;
+    height: 10%;
+}
+.aitemhi {
+    margin:3px;
+    padding:2px;
+ 
 }
