--- a/MIST143_Traveler/Views/CustomerCenter/newLoginpag.cshtml
+++ b/MIST143_Traveler/Views/CustomerCenter/newLoginpag.cshtml
@@ -82,11 +82,11 @@
             </div>
         </div>
     </div>
+    @*"@Url.ActionLink("Coupon", "CustomerCenter"*@
 
-
-</body>
-@*</html>*@
-@*}*@
+</body >
+        @*</html>*@
+        @*}*@
 
     <script>
 
