--- a/MIST143_Traveler/Views/Shared/Components/PasswordChange/Default.cshtml
+++ b/MIST143_Traveler/Views/Shared/Components/PasswordChange/Default.cshtml
@@ -27,23 +27,23 @@
                     <div class="box_body col-4">
                         <div class="inputs p-2">
                             <header>舊密碼</header>
-                            <input id="@v.MembersId" value="@v.MembersId" type="hidden"/>
-                            <input class="form-control" type="text" name="OldPassword" id="OldPassword" placeholder="password" aria-label="default input example">
+                            <input id="MembersId" value="@v.MembersId" name="MembersId" type="hidden" />
+                            <input class="form-control" type="password" name="舊密碼" id="OldPassword" placeholder="password" aria-label="default input example">
                         </div>
                         <div class="inputs p-2">
                             <header>重設密碼</header>
-                            <input class="form-control" type="text" name="Password1" id="Password1" placeholder="password" aria-label="default input example">
+                            <input class="form-control" type="password" name="新密碼" id="Password1" placeholder="password" aria-label="default input example">
                         </div>
 
                         <div class="inputs p-2">
                             <header>再次確認密碼</header>
-                            <input class="form-control" type="text" name="Password2" id="Password2" placeholder="password" aria-label="default input example">
+                            <input class="form-control" type="password" name="確認新密碼" id="Password2" placeholder="password" aria-label="default input example">
                         </div>
                     </div>
 
                     <div class="d-flex mb-3">
                         <div class="me-auto p-2">
-                            <button type="submit" class="btn btn-warning 按鈕顏色" id="send" onclick="bb()">儲存</button>
+                            <button type="submit" class="btn btn-warning 按鈕顏色" id="send" onclick="Passs()">儲存</button>
                         </div>
                     </div>
 
@@ -59,36 +59,45 @@
 
 </body>
 
+
+@section Scripts{
+    <script>
+        
+
+    </script>
+}
 <script>
-    const Pas = () => {
-        var pasData = {
-            MembersId: $("#MembersId").val(),
-            OldPassword: $("#OldPassword").val(),
-            Password1: $("#Password1").val(),
-            Password2: $("#Password2").val(),
-        }
-        $.ajax({
-            url: '@Url.Action("PasswordChange", "CustomerCenter")',
-            method: 'Post',
-            dataType: 'Json',
-            data: { CP: pasData },
-            success: function (datas) {
-                if (!datas.res) {
-                    Swal.fire({
-                        icon: 'error',
-                        title: '輸入錯誤',
-                        text: datas.msg,
-
-                    })
-                    return;
-                }
-                Swal.fire(
-                    '您的變更已儲存!',
-                    '讚啦!',
-                    'success'
-                )
-            }
-        })
+    const aaa=()=> {
+        console.log(123)
     }
+    const Passs = () => {
+            var pasData = {
+                MembersId: $("#MembersId").val(),
+                舊密碼: $("#OldPassword").val(),
+                新密碼: $("#Password1").val(),
+                確認新密碼: $("#Password2").val(),
+            }
+            $.ajax({
+                url: '@Url.Action("PasswordChange", "CustomerCenter")',
+                method: 'Post',
+                dataType: 'Json',
+                data: { inCP: pasData },
+                success: function (datas) {
+                    if (!datas.res) {
+                        Swal.fire({
+                            icon: 'error',
+                            title: '輸入錯誤',
+                            text: datas.msg,
 
+                        })
+                        return;
+                    }
+                    Swal.fire(
+                        '您的變更已儲存!',
+                        '讚啦!',
+                        'success'
+                    )
+                }
+            })
+        }
 </script>
