--- a/MIST143_Traveler/Views/CustomerCenter/TextM.cshtml
+++ b/MIST143_Traveler/Views/CustomerCenter/TextM.cshtml
@@ -42,11 +42,11 @@
                 <input asp-for="Email" class="form-control" />
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            @*<div class="form-group">
                 <label asp-for="Gender" class="control-label"></label>
                 <input asp-for="Gender" class="form-control" />
                 <span asp-validation-for="Gender" class="text-danger"></span>
-            </div>
+            </div>*@
             <div class="form-group">
                 <label asp-for="CityId" class="control-label"></label>
                 <input asp-for="CityId" class="form-control" />
