--- a/MIST143_Traveler/Views/Shopping/PayCheckout.cshtml
+++ b/MIST143_Traveler/Views/Shopping/PayCheckout.cshtml
@@ -1,4 +1,4 @@
-﻿@model MIST143_Traveler.Models.TravelProduct
+﻿@model MIST143_Traveler.MViewModel.CProductMemberViewModel
 
 @{
     ViewData["Title"] = "PayCheckout";
@@ -7,31 +7,33 @@
 @section Styles{
     <link rel="stylesheet" href="~/css/travelOrder.css" />
 }
-@{ 
-    string TotalPrice;
-    TotalPrice = (Model.Price * 1).ToString("###,###,##0");
+@{
+    decimal TotalPrice = Model.產品會員.FirstOrDefault().Price * Model.產品會員.FirstOrDefault().Count;
 }
-    <!-- 從這邊開始複製header跟nav，上面引用的css位置注意一下-->
-    <nav>
-        <div class="secondary-nav payTimeLine">
-            <div class="icon">
-                <i class="bi bi-check-circle-fill"></i>
-                <div class="timeLineInfo">選擇方案</div>
-            </div>
-            <div class="line check"></div>
-            <div class="icon">
-                <i class="bi bi-check-circle-fill"></i>
-                <div class="timeLineInfo">填寫資料</div>
-            </div>
-            <div class="line check"></div>
-            <div class="icon more">
-                <i class="bi bi-three-dots"></i>
-                <div class="timeLineInfo">完成付款</div>
-            </div>
+<!-- 從這邊開始複製header跟nav，上面引用的css位置注意一下-->
+<nav>
+    <div class="secondary-nav payTimeLine">
+        <div class="icon">
+            <i class="bi bi-check-circle-fill"></i>
+            <div class="timeLineInfo">選擇方案</div>
         </div>
-    </nav>
-    <!-- 複製到這邊，下面article刪掉測試用內容，寫入自己的html。注意class名稱不要汙染到全域的html標籤 -->
-    <article class="payContainer">
+        <div class="line check"></div>
+        <div class="icon">
+            <i class="bi bi-check-circle-fill"></i>
+            <div class="timeLineInfo">填寫資料</div>
+        </div>
+        <div class="line check"></div>
+        <div class="icon more">
+            <i class="bi bi-three-dots"></i>
+            <div class="timeLineInfo">完成付款</div>
+        </div>
+    </div>
+</nav>
+<!-- 複製到這邊，下面article刪掉測試用內容，寫入自己的html。注意class名稱不要汙染到全域的html標籤 -->
+<article class="payContainer">
+    <form method="post" action="PayEnd">
+        <input type="hidden" name="TravelProductId" value="@Model.產品會員.FirstOrDefault().TravelProductId" />
+        <input type="hidden" name="PaymethodId" value="4" />
         <div class="payContainerInner">
             <div>
                 <div class="row">
@@ -148,61 +150,68 @@
                             <div class="payInfoRow checkout  p-3">
                                 <div class="left">點擊「確認付款方式」即表示確認訂單與右方總金額無誤，且同意<a>平台服務條款</a>、<a>退改政策</a></div>
                                 <div class="right">
-                                    <div class="mainTitle">NT$ @TotalPrice</div>
-                                    <button type="button" class="btn btn-main" data-bs-toggle="modal" data-bs-target="#joinModal">確認付款</button>
+                                    <div class="mainTitle">NT$ @TotalPrice.ToString("###,###,##0")</div>
+                                    <input type="submit" class="btn btn-main" value="確認付款" @*data-bs-toggle="modal" data-bs-target="#joinModal"*@ />
+                                    @*<button type="button" class="btn btn-main" data-bs-toggle="modal" data-bs-target="#joinModal">確認付款</button>*@
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="col-4 ">
                         <div class="rightSide ">
-                            <div class="titleFontStyle">@Model.TravelProductName</div>
-                            @*<div class="subtext">@Model.EventIntroduction</div>*@
+                            <div class="titleFontStyle">@Model.產品會員.FirstOrDefault().TravelProductName</div>
                             <div class="border-bottom-line"></div>
                             @*<div class="infoRow">
-                                <div class="subInfoText">日期</div>
-                                <div>2022年10月11日 10:00 上午</div>
-                            </div>*@
+            <div class="subInfoText">日期</div>
+            <div>2022年10月11日 10:00 上午</div>
+        </div>*@
                             <div class="infoRow">
                                 <div class="subInfoText">數量</div>
-                                <div>1 x 成人</div>
+                                <div>@Model.產品會員.FirstOrDefault().Count x 成人</div>
+                                <input type="hidden" name="Quantity" value="@Model.產品會員.FirstOrDefault().Count" />
+                            </div>
+                            <div class="border-bottom-line"></div>
+                            <div class="infoRow">
+                                <div class="subInfoText">單價</div>
+                                <div class="titleFontStyle">NT$ @Model.產品會員.FirstOrDefault().Price.ToString("###,###,##0")</div>
+                                <input type="hidden" name="UnitPrice" value="@Model.產品會員.FirstOrDefault().Price.ToString("###,###,##0")" />
                             </div>
                             <div class="border-bottom-line"></div>
                             <div class="infoRow">
                                 <div class="subInfoText">總價</div>
-                                <div class="titleFontStyle">NT$ @TotalPrice</div>
+                                <div class="titleFontStyle">NT$ @TotalPrice.ToString("###,###,##0")</div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-
         </div>
-    </article>
-    <!-- 已加入購物車訊息彈窗 -->
-    <div class="modal fade" id="joinModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true"
-         style="display: none;">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <button type="button" class="btn-close modalClose " data-bs-dismiss="modal"
-                        aria-label="Close"></button>
-                <div class="infoTitle mt-4"></div>
-                <div class="modal-body text-center ">
-                    <h2>付款完成</h2>
-                    <h3>即將跳轉至首頁...</h3>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-primary" id="modalCheck">確定</button>
-                </div>
+    </form>
+</article>
+<!-- 已加入購物車訊息彈窗 -->
+<div class="modal fade" id="joinModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true"
+     style="display: none;">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <button type="button" class="btn-close modalClose " data-bs-dismiss="modal"
+                    aria-label="Close"></button>
+            <div class="infoTitle mt-4"></div>
+            <div class="modal-body text-center ">
+                <h2>付款完成</h2>
+                <h3>即將跳轉至首頁...</h3>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary" id="modalCheck">確定</button>
             </div>
         </div>
     </div>
-    <!-- 複製footer的範圍 -->
-    <!-- 結束 -->
-    @section Scripts{
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
-        <script src="~/js/travelOrder.js"></script>
-        @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-    }
+</div>
+<!-- 複製footer的範圍 -->
+<!-- 結束 -->
+@section Scripts{
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/js/travelOrder.js"></script>
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+}
 
 
